# math-tools-api

./: .gitignore  CMakeLists.txt  README.MD
app/: CMakeLists.txt  main.cpp
doc/: OneFlow.txt  SemanticVersioning.txt  markdown.txt  onflow.txt
source/: CMakeLists.txt  Sub.cpp  Sub.h  Sum.cpp  Sum.h
source/foo/: foo.cpp  foo.h
tests/: CMakeLists.txt  mainTest.cpp  subTest.cpp  sumTest.cpp
